--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -5,3 +5,37 @@
 *::before {
     box-sizing: border-box;
 }
+
+button {
+    padding: 0;
+    margin: 0;
+    /* outline: none; */
+    border: none;
+    cursor: pointer;
+}
+
+.btn-default {
+    background-color: rgba(255, 255, 255, 0.8);
+    color: #000;
+    transition: background-color 0.3s ease;
+}
+
+.btn-default:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.btn-gray {
+    background-color: rgba(109, 109, 110, 0.7);
+    color: white;
+    transition: background-color 0.3s ease;
+}
+
+.btn-gray:hover {
+    background-color: rgba(109, 109, 110, 0.4);
+}
+
+.btn-l {
+    font-size: 0.9rem;
+    padding: 0.45rem 1.25rem;
+    border-radius: 6px;
+}
