--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -6,6 +6,17 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: #000;
+}
+
+#app {
+    position: relative;
+    width: 100%;
+    min-width: 1280px;
+    margin: 0 auto;
+}
+
 button {
     padding: 0;
     margin: 0;
@@ -35,7 +46,7 @@ button {
 }
 
 .btn-l {
-    font-size: 0.9rem;
-    padding: 0.45rem 1.25rem;
+    font-size: 15px;
+    padding: 8px 20px;
     border-radius: 6px;
 }
