--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -50,3 +50,52 @@ button {
     padding: 8px 20px;
     border-radius: 6px;
 }
+
+/* 이따가 옮길 부분 */
+.show-container {
+    position: relative;
+    z-index: 3;
+}
+
+/* 영화 슬라이드 컨테이너 */
+.movie-container {
+    width: 100%;
+    height: 130px;
+}
+
+.movie-wrapper {
+    width: 100%;
+    height: 100%;
+}
+
+.movie-slide {
+    width: 250px;
+    height: 100%;
+    transition: transform 0.3s ease 0s;
+}
+
+.movie-slide:hover {
+    transform: scale(1.2);
+}
+
+.movie {
+    display: block;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
+.movie .movie__thumbnail {
+    display: block;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+
+.movie .movie__thumbnail > img {
+    display: block;
+    max-width: 100%;
+    object-fit: fill;
+    border-radius: 5px;
+}
