--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -7,13 +7,14 @@
 }
 
 body {
-    background-color: #000;
+    background-color: #141414;
 }
 
 #app {
     position: relative;
     width: 100%;
     min-width: 1280px;
+    max-width: 1920px;
     margin: 0 auto;
 }
 
@@ -54,28 +55,27 @@ button {
 /* 이따가 옮길 부분 */
 .show-container {
     position: relative;
-    z-index: 3;
 }
 
 /* 영화 슬라이드 컨테이너 */
-.movie-container {
+.swiper-container.movie-container {
     width: 100%;
-    height: 130px;
+    height: auto;
+    padding: 0 30px;
 }
 
-.movie-wrapper {
-    width: 100%;
-    height: 100%;
+/* Swiper Scale 적용위해서 필수! */
+.movie-container .swiper-wrapper {
+    padding: 30px 0;
 }
 
-.movie-slide {
-    width: 250px;
-    height: 100%;
-    transition: transform 0.3s ease 0s;
+.movie-container .swiper-slide {
+    transition: 250ms all;
 }
 
-.movie-slide:hover {
-    transform: scale(1.2);
+.movie-container .swiper-slide:hover {
+    transform: scale(1.1);
+    z-index: 3;
 }
 
 .movie {
@@ -86,16 +86,26 @@ button {
     cursor: pointer;
 }
 
+/* 이미지 비율 맞추는 부분! */
 .movie .movie__thumbnail {
+    position: relative;
     display: block;
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
 }
 
 .movie .movie__thumbnail > img {
-    display: block;
-    max-width: 100%;
-    object-fit: fill;
-    border-radius: 5px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 3px;
+}
+/* 이미지 비율 맞추는 부분! */
+
+/* swiper navigation */
+.movie-container .swiper-button-next:after,
+.movie-container .swiper-button-prev:after {
+    color: #fff;
+    font-weight: bold;
 }
