searchInput 전역 상태로 변경, 검색결과 없을 경우 나타나는 컴포넌트 생성

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -10,6 +10,7 @@ body {
     background-color: #141414;
     font-family: "Noto Sans KR", sans-serif;
     letter-spacing: 0.5px;
+    line-height: 1.2;
 }
 
 #app {
