--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -6,6 +6,12 @@
     box-sizing: border-box;
 }
 
+html,
+body {
+    width: 100%;
+    height: 100vh;
+}
+
 body {
     background-color: #141414;
     font-family: "Noto Sans KR", sans-serif;
