detailView 로딩 컴포넌트 생성, genre api 함수 생성

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,6 +1,10 @@
 @import "./reset.css";
 @import "./animations.css";
 
+:root {
+    --skeleton-color: #212529;
+}
+
 *,
 *::after,
 *::before {
@@ -202,6 +206,36 @@ button {
 /* Movie Skeleton */
 .skeleton-grid {
     display: flex;
+}
+
+.skeleton-bar {
+    width: 100px;
+    height: 1.25rem;
+    background-color: var(--skeleton-color);
+}
+
+.skeleton-list-item {
+    display: flex;
+    width: 100%;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.skeleton-circle {
+    width: 1.25rem;
+    height: 1.25rem;
+    margin-right: 1rem;
+    background-color: var(--skeleton-color);
+    border-radius: 50%;
+}
+
+.skeleton-list-item .skeleton-bar {
+    flex: 1 1;
+}
+
+/* 반응형 그리드 리스트 */
+.grid-list {
+    border: 1px solid #ddd;
 }
 
 /* Media querys */
