--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -14,7 +14,7 @@
 }
 
 html {
-    /* font-size: 62.5%; */
+    font-size: 62.5%;
 }
 
 html,
@@ -181,13 +181,13 @@ button {
     justify-content: center;
     align-items: center;
     /* padding: 0.75rem 0.85rem; */
-    width: 2.5rem;
-    height: 2.5rem;
+    width: 4rem;
+    height: 4rem;
     border: 2px solid rgba(255, 255, 255, 0.7);
     border-radius: 50%;
     background-color: rgba(42, 42, 42, 0.6);
     color: white;
-    font-size: 1rem;
+    font-size: 1.5rem;
     outline: none;
 }
 
