--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -51,8 +51,15 @@ a {
     font-size: 0;
 }
 
-/* buttons */
+.blind {
+    position: absolute;
+    top: auto;
+    left: -10000px;
+    height: 1px;
+    overflow: hidden;
+}
 
+/* buttons */
 button {
     padding: 0;
     margin: 0;
