--- a/src/assets/css/animations.css
+++ b/src/assets/css/animations.css
@@ -2,63 +2,79 @@
 
 /* shine effect */
 .shine {
-    background-image: linear-gradient(
-        90deg,
-        rgba(255, 255, 255, 0),
-        rgba(255, 255, 255, 0.25),
-        rgba(255, 255, 255, 0)
-    );
+  background-image: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0),
+    rgba(255, 255, 255, 0.25),
+    rgba(255, 255, 255, 0)
+  );
 
-    background-size: 40px 100%;
-    background-repeat: no-repeat;
-    animation: shine 1s linear infinite;
+  background-size: 40px 100%;
+  background-repeat: no-repeat;
+  animation: shine 1s linear infinite;
 }
 
 /* Skeleton Shine effect */
 @keyframes shine {
-    to {
-        background-position: right -40px top 0;
-    }
+  to {
+    background-position: right -40px top 0;
+  }
 }
 
 .fadeInBg {
-    animation: fadeInBg 1s ease-in 0s forwards;
+  animation: fadeInBg 1s ease-in 0s forwards;
 }
 
 @keyframes fadeInBg {
-    0% {
-        opacity: 0;
-    }
+  0% {
+    opacity: 0;
+  }
 
-    30% {
-        opacity: 0.3;
-    }
+  30% {
+    opacity: 0.3;
+  }
 
-    50% {
-        opacity: 0.5;
-    }
+  50% {
+    opacity: 0.5;
+  }
 
-    70% {
-        opacity: 0.7;
-    }
+  70% {
+    opacity: 0.7;
+  }
 
-    100% {
-        opacity: 1;
-    }
+  100% {
+    opacity: 1;
+  }
 }
 
 /* FadeIn 애니메이션 */
 
 .fadeIn {
-    opacity: 0;
-    animation: fadeIn 0.5s ease-in 0s forwards;
+  opacity: 0;
+  animation: fadeIn 0.5s ease-in 0s forwards;
 }
 
 @keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.animation--bigger {
+  animation: bigger 0.2s linear forwards;
+}
+
+@keyframes bigger {
+  from {
+    transform: scale(0.5);
+    opacity: 0;
+  }
+
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
