--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -63,7 +63,7 @@ a {
 
 /* Swiper Scale 적용위해서 필수! */
 .movie-container .swiper-wrapper {
-  padding: 30px 0;
+  /* padding: 30px 0; */
 }
 
 .movie-container .swiper-slide {
@@ -72,7 +72,7 @@ a {
 }
 
 .movie-container .swiper-slide:hover {
-  transform: scale(1.1);
+  /* transform: scale(1.1); */
   z-index: 3;
 }
 
