MoviePage 생성 및 마크업

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -10,6 +10,10 @@
   --black-color: #000000;
   --release-date-color: #44cc66;
   --vote-color: #fcc419;
+  --red-color: red;
+  --blue-color: blue;
+  --grey-color: grey;
+  --light-grey-color: #ddd;
 }
 
 *,
